added new RTM connection with live data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<str-header></str-header>
+<div class="container">
+	<!-- <router-outlet></router-outlet> -->
+	<h1>Home page for Satori Tweet Chanel</h1> 
+</div>
